kdebindings (4:4.4.5-6) UNRELEASED; urgency=low

  [ Pino Toscano ]
  * Backport upstream fixes (merged in smokegen_phonon.diff) to make
    smokephonon compile with Phonon >= 4.5.0. (Closes: #625707)

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 09 May 2011 12:21:58 +0200

kdebindings (4:4.4.5-5) unstable; urgency=high

  * Saluting Canterbury Distribution

  [ Didier Raboud ]
  * Drop libsmokeqtmultimedia4-3 (Closes: #620219).
    - Urgency high for Qt4.7 transition.
  * Add libqtwebkit-dev B-D (Closes: #618215)

  [ Sune Vuorela ]
  * Add qtwebkit includes to python build

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 31 Mar 2011 14:31:18 +0200

kdebindings (4:4.4.5-4) unstable; urgency=low

  [ Pino Toscano ]
  * Backport some upstream revisions to fix compilation: (Closes: #616139)
    - r1150375 for SIP > 4.10.
    - r1170602, r1209688, and r1211266 for PyQt4 4.8.x.
    - r1184022 to fix a smokegen segfault when parsing QtOpenGL headers.
  * Few touches to the packages descriptions.
    - ... including the proper capitalization of "SMOKE". (Closes: #596875)

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 06 Mar 2011 23:58:09 +0100

kdebindings (4:4.4.5-3) unstable; urgency=low

  [ Pino Toscano ]
  * python-kde4-dev needs to depend on python-kde4, otherwise pykdeuic4.py
    does not work. (Closes: #592286)
  * Few touches to the packages descriptions.
    - ... including the libsmokekutils3 one. (Closes: #592280)

  [ Modestas Vainius ]
  * Move python2.5 dependencies to python-kde4 Suggests (Closes: #595532).
    Even if python-kde4 still provides python2.5 bindings, Python 2.5 is no
    longer a default and hence it is not a pre-requisite for the package to be
    useful on standard Debian install.
  * Support DEB_BUILD_OPTIONS=parallel=X properly.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 13 Sep 2010 20:44:50 +0300
